Shortened message so that it can be read easily within 4 seconds

--- a/app/views/notifications/teacher/_queued.html.haml
+++ b/app/views/notifications/teacher/_queued.html.haml
@@ -5,5 +5,4 @@
   .span8
     %p.title
     %p
-      The PDF document will be created shortly and will be ready for 
-      download after the above mentioned time
+      PDF document will be ready for download after the above mentioned time
