--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
 
 %html{html_attrs}
   %head 
-    %title= "Grades will happen ..."
+    %title= "Teach more. Help more. Grade less"
     = stylesheet_link_tag "application" 
     = javascript_include_tag "application", "welcome"
     = javascript_include_tag "external" if Rails.env == "production"
