--- a/app/views/faq/_grading.html.haml
+++ b/app/views/faq/_grading.html.haml
@@ -2,25 +2,37 @@
 #faq-grading.row-fluid
   %h1.white= "Questions on grading" 
   .span5
+    %p.question= "What subjects do you cover?" 
+    %p
+      We are starting with Mathematics. But going forward, we intend to cover 
+      other science subjects - like Physics, Chemistry, Computer Science etc.
     %p.question= "I know my students and I grade accordingly. Why should I trust your grading?"
     %p
-      True. We do not know your students and it is unlikely that we will ever get 
-      to know them personally
+      True. We do not know your students and its unlikely we will ever
+      know them personally
     %p
-      All that we offer, therefore, is an impartial assessment of a student's work 
-      on a quiz you have made. And for what its worth, if a student's work is 
-      mathematically sound in your country, then it is mathematically sound everywhere else in the world
+      But we do know maths and science. And what is mathematically and scientifically 
+      sound in one country is mathematically and scientifically sound everywhere else
+      in the world
+    %p
+      All that we offer, therefore, is an impartial assessment of a student's work. 
+      And more than the grades, we hope it is the feedback we give that students will use 
+      as a basis for further study, discussion and improvement
+  .span5.offset1
+    %p.question= "Who does the grading?"
+    %p
+      Our engineers do. All of them have university degrees in engineering and therefore 
+      know something about maths and science
     %p.question= "Do your graders give marks?"
     %p
       Not directly. For each question, our graders give structured and free-flowing 
       feedback that the syetem then uses to calculate a numerical score. If two 
       students get the same feedback, then they will get the same score - irrespective 
       of who the graders were
-  .span5.offset1
-    %p.question= "What subjects do you cover?" 
+    %p.question= "How long would it take to grade an assignment?"
     %p
-      We are starting with Mathematics. But going forward, we intend to cover 
-      other science subjects - like Physics, Chemistry, Computer Science etc.
-    %p.question= "How long before I see results?"
+      If the work of all students has been scanned together and sent in one set, then 
+      we aim to have it graded within three (3) working days
     %p
-      Within three(3) working days
+      When graded, teachers and students will get an e-mail to let them know that 
+      results can now be seen
