--- a/app/views/layouts/faq.html.haml
+++ b/app/views/layouts/faq.html.haml
@@ -32,6 +32,6 @@
             %li
               = simple_link :for => "Why we do what we do", :href => '#faq-inspiration'
         .span7.offset3{ :id => 'faq-content-panel' }
-          = render :partial => 'faq/grading'
+          = render :partial => 'faq/teachers/grading'
           = render :partial => 'faq/terminology'
-          = render :partial => 'faq/scanning'
+          = render :partial => 'faq/teachers/scanning'
