Added Calibri as the preferred font on MS

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -25,6 +25,7 @@ $panel-colour: lighten(black, 20%) ;
 body {
   font: {
    family: Ubuntu,
+            "Calibri",
             "Trebuchet MS",
             "Lucida Grande",
             "Lucida Sans",
