--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -977,7 +977,6 @@ li.split {
 } 
 
 #faq-side-panel { 
-  // letter-spacing: 0.5px ;
   position:fixed ;
 
   padding: {
@@ -991,10 +990,9 @@ li.split {
     > a { 
       color: white ; 
       font: { 
-        size: 12px ;
+        size: 15px ;
       } 
       padding-left: 0px ;
-      text-transform: lowercase ;
     }
   }
 
@@ -1010,16 +1008,15 @@ li.split {
       top: 10px ;
       bottom: 10px ;
     }
-    // text-transform: lowercase ;
   } 
 } 
 
 #faq-content-panel { 
   color: white ;
+  letter-spacing: 0.4px ;
   font: {
     size: 12px ;
-    weight: 300 ; 
-    family: "Trebuchet MS" ; 
+    weight: 400 ; 
   } 
   line-height: 16px ;
 
@@ -1036,7 +1033,29 @@ li.split {
 
   h1 { 
     padding-bottom: 10px ;
-    border-bottom: 1px solid white ; 
+  } 
+
+  .accordion-group { 
+    border: none ;
+    
+    .accordion-heading { 
+      font : { 
+        size: 13px ;
+      } 
+      > a { 
+        color: white ; 
+        &:hover { text-decoration: none ; }
+        padding: 4px 15px ;
+      }
+    } 
+    .accordion-body { 
+      border-bottom: 1px dotted $orange ; 
+    } 
+    .accordion-inner { 
+      border: none ;
+      font-size: 12px ;
+      margin-left:6% ;
+    } 
   } 
 
 } 
