--- a/app/views/notifications/teacher/_queued.html.haml
+++ b/app/views/notifications/teacher/_queued.html.haml
@@ -1,8 +1,8 @@
 
-#n-queued.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 4000 } }
+#n-queued.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 5000 } }
   .span3
     = image_tag 'notifications/timer.png', :class => 'big-icon'
   .span8
     %p.title
     %p
-      PDF document will be ready for download after the above mentioned time
+      PDF will be ready for download after the above mentioned time
