--- a/app/views/faq/_scanning.html.haml
+++ b/app/views/faq/_scanning.html.haml
@@ -1,6 +1,6 @@
 
 #faq-scanning.row-fluid
-  %h3.orange= "Scanning"
+  %h3.orange= "On Scanning"
   .span8
     .accordion{ :id => 'fs' }
       .accordion-group
@@ -18,18 +18,18 @@
         .accordion-body.collapse{ :id => 'fs-2' }
           .accordion-inner
             %p
-              Any scanner would do. We would however recommend that you use a scanner 
-              which can take a bunch of pages at a time
+              Almost any scanner would do. The only kind of scanner we do <b>not</b> recommend  
+              is what is called <b>flat-bed scanner</b>
             %p
-              And if you are ready to spend a little more, then there are scanners  
-              that can not only scan multiple pages at a time, but also both sides of 
-              a page at the same time
-            %p 
-              The only type of scanner we do not recommend is what is called a 
-              flat-bed scanner. Its the kind where you have to lift a lid, place a sheet 
+              Its the kind where you have to lift a lid, place a sheet 
               and then scan. Fine for scanning 5-6 pages. But any more, and 
               it gets painful to use
-
+            %p
+              We would therefore recommend a scanner that accepts multiple sheets 
+              at a time - like printers do. All major manufacturers make such scanners. 
+              And it should therefore not be too hard for you to find one that meets 
+              your needs - and your budget
+              
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-3' }
             Should I scan in color or black-and-white?
@@ -47,9 +47,9 @@
               Most scanners work in two broad modes - one for scanning photographs 
               and another for scanning documents
             %p
-              Photographs are usually scanned at a high resolution (600 dpi - or dots per inch). 
-              We don't need that. So, scan pages in the document mode with a resolution of 
-              about 200-300 dpi
+              You should scan pages in document mode - which generally means scanning at a resolution 
+              of 200-300 dpi ( or dots per inch ). Don't bother with scanning as photographs (600 dpi and above).
+              It would be overkill, unnecessary and slow
 
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-5' }
