--- a/app/views/layouts/faq.html.haml
+++ b/app/views/layouts/faq.html.haml
@@ -15,15 +15,18 @@
               %a.brand.span4{ :href => "#"}
                 = image_tag "logo-mit-beta-2.png"
       .row-fluid
-        .span2.offset1{ :id => 'faq-side-panel' }
+        .span3.offset1{ :id => 'faq-side-panel' }
           %ul.nav.nav-list.offset1
             %li
-              = simple_link :for => "General", :href => '#faq-general', :icon => 'icon-chevron-right'
+              = simple_link :for => "Generally", :href => '#faq-general', :icon => 'icon-chevron-right'
             %li
-              = simple_link :for => "Grading", :href => '#faq-grading', :icon => 'icon-chevron-right'
+              = simple_link :for => "Using the website", :href => '#faq-website', :icon => 'icon-chevron-right'
             %li
-              = simple_link :for => "Scanning", :href => '#faq-scanning', :icon => 'icon-chevron-right'
+              = simple_link :for => "On Grading", :href => '#faq-grading', :icon => 'icon-chevron-right'
+            %li
+              = simple_link :for => "On Scanning", :href => '#faq-scanning', :icon => 'icon-chevron-right'
         .span7.offset3{ :id => 'faq-content-panel' }
           = render :partial => 'faq/general'
+          = render :partial => 'faq/website'
           = render :partial => 'faq/grading'
           = render :partial => 'faq/scanning'
