--- a/app/views/faq/_grading.html.haml
+++ b/app/views/faq/_grading.html.haml
@@ -1,17 +1,9 @@
 
 #faq-grading.row-fluid
-  %h3.orange= "Grading"
+  %h3.orange= "On Grading"
   .span8
     .accordion{ :id => 'fgr' }
       .accordion-group
-
-        .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#fgr', :toggle => 'collapse' }, :href => '#fgr-1' }
-            What subjects do you cover?
-        .accordion-body.collapse{ :id => 'fgr-1' }
-          .accordion-inner
-            We are starting with Mathematics. But going forward, we intend to cover 
-            other science subjects - like Physics, Chemistry, Computer Science etc.
 
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#fgr', :toggle => 'collapse' }, :href => '#fgr-2' }
@@ -22,21 +14,23 @@
               True. We do not know your students and its unlikely we will ever
               know them personally
             %p
-              But we do know maths and science. And what is mathematically and scientifically 
-              sound in one country is mathematically and scientifically sound everywhere else
-              in the world
-            %p
-              All that we offer, therefore, is an impartial assessment of a student's work. 
-              And more than the grades, we hope it is the feedback we give that students will use 
+              All that we can offer, therefore, is an impartial assessment on the mathematical 
+              soundness of a student's work.
+              That assessment includes a numerical score earned on each question. But more importantly it includes 
+              open-ended feedback - in the form of comments - that we hope students will use 
               as a basis for further study, discussion and improvement
+            %p
+              And for what its worth, we can only submit to you that what is mathematically 
+              sound in one place is mathematically sound everywhere else too
 
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#fgr', :toggle => 'collapse' }, :href => '#fgr-3' }
             Who does the grading?
         .accordion-body.collapse{ :id => 'fgr-3' }
           .accordion-inner
-            Our engineers do. All of them have university degrees in engineering and therefore 
-            know something about maths and science
+            As of now, our engineers do. For the subjects we are targetting, we feel our engineers 
+            are amply qualified to assess student work - given that they have all 
+            studied advanced maths and science at university level
 
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#fgr', :toggle => 'collapse' }, :href => '#fgr-4' }
@@ -44,7 +38,7 @@
         .accordion-body.collapse{ :id => 'fgr-4' }
           .accordion-inner
             Not directly. For each question, our graders give structured and free-flowing 
-            feedback that the syetem then uses to calculate a numerical score. If two 
+            feedback that the system then uses to calculate a numerical score. If two 
             students get the same feedback, then they will get the same score - irrespective 
             of who the graders were
 
@@ -55,7 +49,7 @@
           .accordion-inner
             %p
               If the work of all students has been scanned together and sent in one set, then 
-              we aim to have it graded within three (3) working days
+              we aim to have it graded within three (3) working days after submission
             %p
               When graded, teachers and students will get an e-mail to let them know that 
               results can now be seen
