--- a/app/views/faq/_general.html.haml
+++ b/app/views/faq/_general.html.haml
@@ -7,9 +7,28 @@
 
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#gn', :toggle => 'collapse' }, :href => '#gn-1' }
-            Grading is tedious work. Why are you offering to do it?
+            Grading is tedious work. So why is Gradians doing it? 
         .accordion-body.collapse{ :id => 'gn-1' }
           .accordion-inner
+            %p
+              We do what we do because we believe that a teacher's time is a precious 
+              resource that is best spent teaching new concepts and assisting students 
+              when they struggle
+            %p
+              And so, we started wondering - how can we get teachers more time to do just that? 
+            %p
+              That is when we decided to address the issue of grading. Assessing student understanding 
+              is central to effective pedagogy. But collecting this kind of data takes time - a lot of time
+            %p
+              We want to save teachers that time so that they can focus solely and exclusively on 
+              students 
+            %p
+              We want to make it easy for teachers to build a detailed picture of student performance 
+              over the course of a school year. We want to leave teachers free to study the statistics 
+              and to then use that information to develop strategies for the classroom and for individual 
+              students
+            %p
+              If we can do that in classrooms around the world, then we would have done good
 
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#gn', :toggle => 'collapse' }, :href => '#gn-2' }
