--- a/app/views/faq/_scanning.html.haml
+++ b/app/views/faq/_scanning.html.haml
@@ -18,17 +18,14 @@
         .accordion-body.collapse{ :id => 'fs-2' }
           .accordion-inner
             %p
-              Almost any scanner would do. The only kind of scanner we do <b>not</b> recommend  
-              is what is called <b>flat-bed scanner</b>
+              Any scanner that can take a bunch of sheets at a time
             %p
-              Its the kind where you have to lift a lid, place a sheet 
-              and then scan. Fine for scanning 5-6 pages. But any more, and 
-              it gets painful to use
+              The only type of scanner we do <b>not</b> recommend is what is called 
+              a <b>flat-bed</b> scanner. Its the kind where you have to lift a lid, place 
+              a sheet and then scan
             %p
-              We would therefore recommend a scanner that accepts multiple sheets 
-              at a time - like printers do. All major manufacturers make such scanners. 
-              And it should therefore not be too hard for you to find one that meets 
-              your needs - and your budget
+              The problem with flat-bed scanners is that one can scan only one sheet 
+              at a time. Fine for scanning 5-6 sheets. But any more, and its painful to use
               
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-3' }
