- Show Favourites and Show Selected functionality in place - Doesn't do too well with paging though, items on different pages do not consolidate because of filter

--- a/app/views/teachers/_form-qzb.html.haml
+++ b/app/views/teachers/_form-qzb.html.haml
@@ -14,4 +14,7 @@
       .input-append.pull-right.span10
         = f.input_field :name, :class => "span8", :placeholder => "Name the Quiz"
         %button.btn.btn-inverse{ :type => :submit }= "#{btn_text}"
+        %label{ :id => "show-selected-lbl" }
+          %input{ :id => "show-selected", :type => "checkbox" }
+          Show Selected
   %div.purge-blind{ :id => "#{context}-questions" }
