--- a/app/views/teachers/_qzb.html.haml
+++ b/app/views/teachers/_qzb.html.haml
@@ -7,7 +7,9 @@
   %li
     = simple_link :for => "Questions", :href => '#pane-qzb-2', 
       :id => 'tab-qzb-2'
-
+  %li
+    = simple_link :for => "Favourites", :href => '#', 
+      :id => 'tab-qzb-3'
 
 .tab-content
   #pane-qzb-1.tab-pane
