FAQs open in a new tab

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,7 +42,7 @@
             %p.offset1.span8= "Teach more. Help more. Grade less"
             %ul.nav.nav-list.span3
               %li
-                = simple_link :for => "Frequently Asked Questions", :href => faq_path
+                %a{ :href => faq_path, :target => '_blank'}= "Frequently Asked Questions"
           #how-it-works.carousel.slide
             .carousel-inner
               .item 
