Customize registration_debug mail depending on whether geo-location could be inferred

--- a/app/views/mailbot/registration_debug.html.haml
+++ b/app/views/mailbot/registration_debug.html.haml
@@ -1,8 +1,11 @@
 
-%p
-  Detected the following geo-location information
-  %ul
-    %li= "#{@city}"
-    %li= "#{@state}"
-    %li= "#{@zip}"
-    %li= "#{@country}"
+- if @detected
+  %p
+    Detected the following geo-location information
+    %ul
+      %li= "#{@city}"
+      %li= "#{@state}"
+      %li= "#{@zip}"
+      %li= "#{@country}"
+- else 
+  %h3= "Nothing detected"
