[#56]: Add .active to first carousel item to make carousel load faster
Ref: https://github.com/twitter/bootstrap/issues/4420

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,7 +45,7 @@
                 %a{ :href => faq_path, :target => '_blank'}= "Frequently Asked Questions"
           #how-it-works.carousel.slide
             .carousel-inner
-              .item 
+              .item.active 
                 = image_tag "landing/slideshow-1.png"
                 -#.attribution= "Worker designed by Kris Khoury from The Noun Project"
               .item 
