--- a/app/views/faq/_website.html.haml
+++ b/app/views/faq/_website.html.haml
@@ -53,25 +53,20 @@
 
         .accordion-heading
           %a.accordion-toggle{ :data => { :parent => '#wb', :toggle => 'collapse' }, :href => '#wb-5' }
-            I have made a quiz and it will take a couple of minutes for the PDF to get ready. Why?
+            I am making a quiz and it will take a few minutes for the PDF to get ready. Do I have 
+            stay logged-in for all that time and wait?
         .accordion-body.collapse{ :id => 'wb-5' }
           .accordion-inner
             %p
-              A lot of work is done behind the scenes to make a quiz and it just takes the time 
-              that it needs to take
+              No, you don't have to stay logged-in. All that the system is telling you is that 
+              we have received your request for making a PDF and that the PDF will be compiled and  
+              ready for download latest by the specified time
             %p
-              So, rather than keep you waiting for the work to finish, we take your request and put it in a queue 
-              where it is processed in the order in which it came. This way, you can be left free 
-              to continue using the website 
-            %p
-              The time your request will take to finish depends on how many requests are before it 
-              in the queue and how much work your request represents. Ordinarily, however, each 
-              request takes 40-60 seconds to process when its turn comes
+              So, in short, you can continue using the site as normal. Make a new quiz for next week. 
+              Or perhaps make all the quizzes for the year in one sitting. The PDFs will be ready long before 
+              you are ready to print them out
             %p
               The same is true for worksheets too
-              
-
-
 
       -#
         .accordion-heading
