Widen the ask-a-question modal

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -248,10 +248,11 @@ img {
     border-radius: 0px ;
     font : { 
       size: 12px ;
-      family: "Trebuchet MS" ;
+      family: "Tahoma" ; 
+      weight: 300 ;
     } 
     color: white ; 
-    line-height: 14px ;
+    line-height: 15px ;
     padding: { 
       left: 8px ;
       right: 8px ;
