--- a/app/views/modals/user/_ask-a-question.html.haml
+++ b/app/views/modals/user/_ask-a-question.html.haml
@@ -1,10 +1,13 @@
 
-#m-ask-a-question.modal.fade.regular{ :role => :dialog }
+#m-ask-a-question.modal.fade.wide{ :role => :dialog }
   .row-fluid
     .span3
       = image_tag 'notifications/question.png', :class => 'big-icon'
-    .span8
+    .span9
       %p.title= "Write question below"
       = simple_form_for :new, :url => ask_question_path, :remote => true, :defaults => { :label => false } do |f|
-        = f.input :question, :as => :text
+        - if current_account.nil?
+          = f.input :name, :as => :string, :label => 'full name'
+          = f.input :email, :label => 'Your e-mail'
+        = f.input :question, :as => :text, :input_html => { :rows => 10, :cols => 60, :class => 'span11' }
         %button.btn.btn-primary.btn-large.pull-right{ :type => :submit }= "Ask Question"
