[#61]: On Chrome, selecting a question for a quiz was leading to form submission
Helper method now adds :type => :button always
Have to ensure that it does not cause problems elsewhere where simple_button is used

Also, added tooltip on the plus-sign

--- a/app/views/toolbox/_line.html.haml
+++ b/app/views/toolbox/_line.html.haml
@@ -15,5 +15,6 @@
   .span2.long-badge
   .text
   .span2.subtext
-  = simple_button :icon => 'icon-plus-sign', :as => :checkbox, :name => 'checked', :class => 'btn-mini', :toggle => :button
+  = simple_button :icon => 'icon-plus-sign', :as => :checkbox, :tooltip => "Select",
+    :name => 'checked', :class => 'btn-mini', :toggle => :button
   = check_box_tag :tbd, :t, false, :class => :hide
