--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -32,6 +32,7 @@
   #notifications
     = render :partial => 'notifications/teacher/favourited'
     = render :partial => 'notifications/teacher/qzb-nothing-selected'
+    = render :partial => 'notifications/teacher/qzb-no-name'
     = render :partial => 'notifications/teacher/new-sektion'
     = render :partial => 'notifications/teacher/queued'
     = render :partial => 'notifications/teacher/compiled'
