--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -26,6 +26,7 @@ body {
   font: {
    family: Ubuntu,
             "Calibri",
+            "Andale Mono",
             "Trebuchet MS",
             "Lucida Grande",
             "Lucida Sans",
