Edited list of preferred fonts by platform

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -24,9 +24,10 @@ $panel-colour: lighten(black, 20%) ;
 
 body {
   font: {
-   family: Ubuntu,
-            "Calibri",
-            "Andale Mono",
+   family: Ubuntu, // linux 
+            "Calibri", // windows 
+            "GillSans", // Mac
+            "Futura", // Mac
             "Trebuchet MS",
             "Lucida Grande",
             "Lucida Sans",
